@@ -4,16 +4,16 @@ import com.Hansung.Capston.common.DayOfWeek;
 import com.Hansung.Capston.common.DietType;
 import com.Hansung.Capston.dto.Diet.Ingredient.PreferredIngredientResponse;
 import com.Hansung.Capston.dto.Diet.Ingredient.RecommendedIngredientResponse;
-import com.Hansung.Capston.dto.Diet.Nutrition.NutritionLogResponse;
 import com.Hansung.Capston.dto.Diet.Nutrition.RecommendedNutrientResponse;
 import com.Hansung.Capston.dto.Diet.Recipe.RecommendRecipeResponse;
 import com.Hansung.Capston.entity.Diet.Food.FoodData;
-import com.Hansung.Capston.entity.Diet.Nutrient.NutritionLog;
 import com.Hansung.Capston.entity.Diet.Recipe.RecipeData;
 import com.Hansung.Capston.entity.Diet.Recipe.RecommendedRecipe;
+import com.Hansung.Capston.entity.Diet.Recipe.RecommendedRecipeCandidate;
 import com.Hansung.Capston.entity.UserInfo.User;
 import com.Hansung.Capston.repository.Diet.Food.FoodDataRepository;
 import com.Hansung.Capston.repository.Diet.Recipe.RecipeDataRepository;
+import com.Hansung.Capston.repository.Diet.Recipe.RecommendedRecipeCandidateRepository;
 import com.Hansung.Capston.repository.Diet.Recipe.RecommendedRecipeRepository;
 import com.Hansung.Capston.repository.UserInfo.UserRepository;
 import com.Hansung.Capston.service.ApiService.OpenAiApiService;
@@ -35,6 +35,7 @@ public class RecipeService {
   private final RecipeDataRepository recipeDataRepository;
   private final FoodDataRepository foodDataRepository;
   private final RecommendedRecipeRepository recommendedRecipeRepository;
+  private final RecommendedRecipeCandidateRepository recommendedRecipeCandidateRepository;
   private final UserRepository userRepository;
 
   private final IngredientService ingredientService;
@@ -43,26 +44,29 @@ public class RecipeService {
 
   public RecipeService(RecipeDataRepository recipeDataRepository,
       FoodDataRepository foodDataRepository,
-                       RecommendedRecipeRepository recommendedRecipeRepository, IngredientService ingredientService, OpenAiApiService openAiApiService, UserRepository userRepository,
+      RecommendedRecipeRepository recommendedRecipeRepository,
+      RecommendedRecipeCandidateRepository recommendedRecipeCandidateRepository,
+      IngredientService ingredientService,
+      OpenAiApiService openAiApiService,
+      UserRepository userRepository,
       NutrientService nutrientService) {
     this.recipeDataRepository = recipeDataRepository;
     this.foodDataRepository = foodDataRepository;
     this.recommendedRecipeRepository = recommendedRecipeRepository;
-      this.ingredientService = ingredientService;
-      this.openAiApiService = openAiApiService;
+    this.recommendedRecipeCandidateRepository = recommendedRecipeCandidateRepository;
+    this.ingredientService = ingredientService;
+    this.openAiApiService = openAiApiService;
     this.userRepository = userRepository;
     this.nutrientService = nutrientService;
   }
 
-  // 레시피 데이터 불러오기
   public List<RecipeData> loadRecipeData() {
     return recipeDataRepository.findAll();
   }
 
-  // 연관 레시피 설정하기
   public void saveRelatedRecipeData() {
     List<RecipeData> allRecipes = recipeDataRepository.findAll();
-    int topN = 3; // 연관 레시피 개수 설정
+    int topN = 3;
 
     Map<RecipeData, List<RecipeData>> relatedRecipesMap = findRelatedRecipes(allRecipes, topN);
 
@@ -70,9 +74,8 @@ public class RecipeService {
       RecipeData baseRecipe = entry.getKey();
       List<RecipeData> relatedRecipes = entry.getValue();
 
-      // 연관 레시피 ID들을 해당 필드에 저장
       if (!relatedRecipes.isEmpty()) {
-        baseRecipe.setRelatedRecipe1(String.valueOf(relatedRecipes.get(0).getRecipeId()));
+        baseRecipe.setRelatedRecipe1(String.valueOf(relatedRecipes.getFirst().getRecipeId()));
       }
       if (relatedRecipes.size() > 1) {
         baseRecipe.setRelatedRecipe2(String.valueOf(relatedRecipes.get(1).getRecipeId()));
@@ -84,18 +87,17 @@ public class RecipeService {
     }
   }
 
-  // 추천 식단 불러오기
   public List<RecommendRecipeResponse> loadRecommendRecipe(String userId) {
     List<RecommendedRecipe> recommendedRecipes = recommendedRecipeRepository.findByUser_UserId(userId);
     List<RecommendRecipeResponse> recommendedRecipeResponses = new ArrayList<>();
     for (RecommendedRecipe recommendedRecipe : recommendedRecipes) {
       recommendedRecipeResponses.add(RecommendRecipeResponse.toDto(recommendedRecipe));
     }
+    log.info("✅ userId: {} 에 대한 추천 식단 {}개를 불러왔습니다.", userId, recommendedRecipeResponses.size());
     return recommendedRecipeResponses;
   }
 
-  // 추천 식단 설정하기
-  public void setRecommendRecipe(String userId) {
+  public void setRecommendRecipeCandidate(String userId) {
     List<RecommendedIngredientResponse> recList = ingredientService.loadRecommendedIngredient(userId);
     List<PreferredIngredientResponse> prefList = ingredientService.loadPreferredIngredients(userId);
 
@@ -109,9 +111,8 @@ public class RecipeService {
     }
 
     List<RecipeData> finalRecipeCandidates = new ArrayList<>();
-    int targetRecipeCount = 50; // LLM에 전달하고 싶은 총 레시피 개수 목표
+    int targetRecipeCount = 100;
 
-    // 1. 재료 기반 레시피 추가 (우선 순위)
     if (!matchingRecipesSet.isEmpty()) {
       finalRecipeCandidates.addAll(matchingRecipesSet);
       log.info("✅ 재료 기반으로 {}개의 레시피가 매칭되었습니다.", finalRecipeCandidates.size());
@@ -119,7 +120,6 @@ public class RecipeService {
       log.info("ℹ️ 재료 기반으로 매칭되는 레시피가 없습니다.");
     }
 
-    // 2. 목표 개수(targetRecipeCount)에 미달하면 영양소 기반 레시피 추가
     if (finalRecipeCandidates.size() < targetRecipeCount) {
       log.info("ℹ️ 레시피 후보가 부족하여 영양소 기반 레시피를 추가합니다. 현재 {}개, 목표 {}개.", finalRecipeCandidates.size(), targetRecipeCount);
 
@@ -128,10 +128,10 @@ public class RecipeService {
       if (nutritionLog.isEmpty()) {
         log.warn("🚨 영양소 로그가 비어있어 추가 레시피 추천이 불가능합니다. userId: {}", userId);
       } else {
-        Double recCalories = (nutritionLog.getFirst().getCalories()+nutritionLog.getLast().getCalories())/2;
-        Double recCarbohydrates = (nutritionLog.getFirst().getCarbohydrate()+nutritionLog.getLast().getCarbohydrate())/2;
-        Double recProtein = (nutritionLog.getFirst().getProtein()+nutritionLog.getLast().getProtein())/2;
-        Double recFat = (nutritionLog.getFirst().getFat()+nutritionLog.getLast().getFat())/2;
+        double recCalories = (nutritionLog.getFirst().getCalories()+nutritionLog.getLast().getCalories())/2;
+        double recCarbohydrates = (nutritionLog.getFirst().getCarbohydrate()+nutritionLog.getLast().getCarbohydrate())/2;
+        double recProtein = (nutritionLog.getFirst().getProtein()+nutritionLog.getLast().getProtein())/2;
+        double recFat = (nutritionLog.getFirst().getFat()+nutritionLog.getLast().getFat())/2;
 
         List<RecipeData> allRecipes = recipeDataRepository.findAll();
         List<RecipeScore> scoredRecipes = new ArrayList<>();
@@ -160,30 +160,25 @@ public class RecipeService {
           scoredRecipes.add(new RecipeScore(recipe, score));
         }
 
-        scoredRecipes.sort(Comparator.comparingDouble(RecipeScore::getScore));
+        scoredRecipes.sort(Comparator.comparingDouble(RecipeScore::score));
 
         Random random = new Random();
-        int recipesToAdd = targetRecipeCount - finalRecipeCandidates.size();
-
-        List<RecipeData> topScoredNutrientRecipes = scoredRecipes.stream()
-            .map(RecipeScore::getRecipe)
+        int nutrientCandidatePoolSize = Math.min(scoredRecipes.size(), 200);
+        List<RecipeData> nutrientCandidatesPool = scoredRecipes.stream()
+            .map(RecipeScore::recipe)
+            .limit(nutrientCandidatePoolSize)
             .collect(Collectors.toList());
-
-        int nutrientCandidatePoolSize = Math.min(topScoredNutrientRecipes.size(), 200); // 영양소 기반으로 뽑을 후보 풀 (예: 상위 200개)
-        List<RecipeData> nutrientCandidatesPool = new ArrayList<>(topScoredNutrientRecipes.subList(0, nutrientCandidatePoolSize));
 
         while (finalRecipeCandidates.size() < targetRecipeCount && !nutrientCandidatesPool.isEmpty()) {
           int randomIndex = random.nextInt(nutrientCandidatesPool.size());
           RecipeData recipeToAdd = nutrientCandidatesPool.remove(randomIndex);
-          // 최종 후보에 이미 없는 경우에만 추가 (혹시 모를 중복 방지)
           if (!finalRecipeCandidates.contains(recipeToAdd)) {
             finalRecipeCandidates.add(recipeToAdd);
           }
         }
-        log.info("✅ 영양소 기반으로 {}개의 레시피를 추가했습니다. 최종 후보: {}개.", recipesToAdd, finalRecipeCandidates.size());
+        log.info("✅ 영양소 기반으로 레시피를 추가했습니다. 최종 후보: {}개.", finalRecipeCandidates.size());
       }
     } else if (finalRecipeCandidates.size() > targetRecipeCount) {
-      // 재료 기반 레시피가 targetRecipeCount를 초과할 경우, 랜덤 샘플링
       log.info("ℹ️ 재료 기반 레시피가 목표 개수({})를 초과합니다. 랜덤 샘플링을 수행합니다. 현재 {}개.", targetRecipeCount, finalRecipeCandidates.size());
       List<RecipeData> tempCandidates = new ArrayList<>();
       Random random = new Random();
@@ -195,64 +190,81 @@ public class RecipeService {
       log.info("✅ 재료 기반 레시피에서 {}개로 랜덤 샘플링 완료. 최종 후보: {}개.", targetRecipeCount, finalRecipeCandidates.size());
     }
 
-
-    // 레시피 이름 추출 (LLM 활용 위해서)
-    List<String> recipeNames = finalRecipeCandidates.stream()
+    List<String> allRecipeNamesForLLM = finalRecipeCandidates.stream()
         .map(RecipeData::getRecipeName)
         .collect(Collectors.toList());
-    log.info("✅ LLM에 전달할 레시피 후보 크기: {}", recipeNames.size());
+    log.info("✅ LLM에 전달할 최종 레시피 후보 크기: {}", allRecipeNamesForLLM.size());
 
-    // ... (이하 기존 LLM 호출 및 RecommendedRecipe 저장 로직 동일) ...
-    String recommendRecipes = openAiApiService.getRecommendedRecipes(recipeNames);
-    String[] weeklyRecipes = recommendRecipes.split("-"); // 요일 구분
+    Map<DietType, List<String>> mealTypeCandidatesFromLLM = openAiApiService.getMealTypeRecipeCandidates(allRecipeNamesForLLM);
+    log.info("✅ LLM으로부터 식사 시간별 레시피 후보군을 성공적으로 받았습니다.");
 
+    User user = userRepository.findByUserId(userId)
+        .orElseThrow(() -> new NoSuchElementException("User not found with userId: " + userId));
+
+    recommendedRecipeCandidateRepository.deleteByUser(user);
+    log.info("ℹ️ 기존 RecommendedRecipeCandidate 데이터 삭제 완료 (userId: {})", userId);
+
+    for (Map.Entry<DietType, List<String>> entry : mealTypeCandidatesFromLLM.entrySet()) {
+      DietType dietType = entry.getKey();
+      List<String> recipesForMealType = entry.getValue();
+
+      for (String recipeNameWithSide : recipesForMealType) {
+        String mainRecipeName = recipeNameWithSide.split(",")[0].trim();
+        RecipeData recipeData = recipeDataRepository.findByRecipeName(mainRecipeName);
+
+        if (recipeData == null) {
+          log.warn("❗ DB에 없는 레시피 (LLM이 생성): {} (식사 타입: {})", mainRecipeName, dietType);
+          continue;
+        }
+
+        RecommendedRecipeCandidate candidate = new RecommendedRecipeCandidate();
+        candidate.setUser(user);
+        candidate.setDietType(dietType);
+        candidate.setRecipeData(recipeData);
+
+        recommendedRecipeCandidateRepository.save(candidate);
+      }
+    }
+    log.info("✅ 식사 시간별 레시피 후보군 RecommendedRecipeCandidate DB 저장 완료.");
+  }
+
+  public void setWeekRecommendRecipe(String userId) {
     User user = userRepository.findByUserId(userId)
         .orElseThrow(() -> new NoSuchElementException("User not found with userId: " + userId));
 
     for (int i = 0; i < 7; i++) {
       DayOfWeek currentDay = DayOfWeek.values()[i];
 
-      if (i >= weeklyRecipes.length) {
-        log.warn("❌ LLM 응답이 7일치를 모두 포함하지 않습니다. ({}일치만 있음)", weeklyRecipes.length);
-        break;
-      }
+      for (DietType type : DietType.values()) {
+        List<RecommendedRecipeCandidate> candidatesForMealType = recommendedRecipeCandidateRepository.findByUserAndDietType(user, type);
 
-      String[] meals = weeklyRecipes[i].split("\\|");
-      for (int j = 0; j < meals.length; j++) {
-        DietType currentType = switch (j) {
-          case 0 -> DietType.breakfast;
-          case 1 -> DietType.lunch;
-          case 2 -> DietType.dinner;
-          default -> throw new IllegalStateException("Unexpected meal type index: " + j);
-        };
+        if (candidatesForMealType.isEmpty()) {
+          log.warn("❌ userId: {}, DietType: {} 에 대한 레시피 후보가 부족하여 7일 식단 배정 불가.", userId, type);
+          continue;
+        }
 
-        List<RecommendedRecipe> existingRecipes = recommendedRecipeRepository.findByUserAndDateAndType(user, currentDay, currentType);
+        List<RecommendedRecipe> existingRecipes = recommendedRecipeRepository.findByUserAndDateAndType(user, currentDay, type);
         if (!existingRecipes.isEmpty()) {
           recommendedRecipeRepository.deleteAll(existingRecipes);
         }
 
-        String[] recipeNamesForMeal = meals[j].split(",");
-        for (String recipeName : recipeNamesForMeal) {
-          RecipeData recipeData = recipeDataRepository.findByRecipeName(recipeName.trim());
+        Random random = new Random();
+        RecommendedRecipeCandidate selectedCandidate = candidatesForMealType.get(random.nextInt(candidatesForMealType.size()));
 
-          if (recipeData == null) {
-            log.warn("❗ DB에 없는 레시피 (LLM이 생성): {} (userId: {}, Date: {}, Type: {})", recipeName.trim(), userId, currentDay, currentType);
-            continue;
-          }
+        RecommendedRecipe recipe = new RecommendedRecipe();
+        recipe.setUser(user);
+        recipe.setDate(currentDay);
+        recipe.setType(type);
+        recipe.setRecipeData(selectedCandidate.getRecipeData());
 
-          RecommendedRecipe recipe = new RecommendedRecipe();
-          recipe.setUser(user);
-          recipe.setDate(currentDay);
-          recipe.setType(currentType);
-          recipe.setRecipeData(recipeData);
-
-          recommendedRecipeRepository.save(recipe);
-        }
+        recommendedRecipeRepository.save(recipe);
+        log.debug("➡️ {} {}에 {} ({} userId) 레시피 배정: {}", currentDay, type, selectedCandidate.getRecipeData().getRecipeName(), userId, recipe.getRecommendedRecipeId());
       }
     }
+    log.info("✅ 7일 식단 배정 완료 (RecommendedRecipeCandidate 풀에서 랜덤 선택).");
   }
 
-  public String updateRecommendedRecipeForMeal(String userId, DayOfWeek dayOfWeek, DietType dietType) {
+  public String updateRecommendRecipe(String userId, DayOfWeek dayOfWeek, DietType dietType) {
     User user = userRepository.findByUserId(userId)
         .orElseThrow(() -> new NoSuchElementException("User not found with userId: " + userId));
 
@@ -262,62 +274,44 @@ public class RecipeService {
       log.info("기존 추천 레시피 삭제 완료 (userId: {}, Date: {}, Type: {})", userId, dayOfWeek, dietType);
     }
 
+    List<RecommendedRecipeCandidate> candidatesForMealType = recommendedRecipeCandidateRepository.findByUserAndDietType(user, dietType);
 
-    List<String> allIngredients = new ArrayList<>();
-    ingredientService.loadRecommendedIngredient(userId).forEach(r -> allIngredients.add(r.getIngredient().getIngredientName()));
-    ingredientService.loadPreferredIngredients(userId).forEach(p -> allIngredients.add(p.getIngredient().getIngredientName()));
-
-    Set<RecipeData> matchingRecipesSet = new HashSet<>();
-    for (String ingredient : allIngredients) {
-      matchingRecipesSet.addAll(recipeDataRepository.findByIngredient(ingredient));
+    if (candidatesForMealType.isEmpty()) {
+      log.warn("❌ userId: {}, DietType: {} 에 대한 레시피 후보가 없어 업데이트 불가.", userId, dietType);
+      return "실패: 해당 식사 시간에 대한 레시피 후보가 없습니다.";
     }
 
-    List<RecipeData> finalRecipeCandidates = new ArrayList<>(matchingRecipesSet);
+    Random random = new Random();
+    RecommendedRecipeCandidate selectedCandidate = candidatesForMealType.get(random.nextInt(candidatesForMealType.size()));
 
-    List<String> recipeNamesForLLM = finalRecipeCandidates.stream()
-        .map(RecipeData::getRecipeName)
-        .collect(Collectors.toList());
+    RecommendedRecipe newRecipe = new RecommendedRecipe();
+    newRecipe.setUser(user);
+    newRecipe.setDate(dayOfWeek);
+    newRecipe.setType(dietType);
+    newRecipe.setRecipeData(selectedCandidate.getRecipeData());
 
-    String recommendRecipesForMeal = openAiApiService.getRecommendedRecipesForSpecificMeal(recipeNamesForLLM, dayOfWeek, dietType);
+    recommendedRecipeRepository.save(newRecipe);
 
-    String[] recipeNamesFromLLM = recommendRecipesForMeal.split(",");
-    for (String recipeName : recipeNamesFromLLM) {
-      RecipeData recipeData = recipeDataRepository.findByRecipeName(recipeName.trim());
-      if (recipeData == null) {
-        log.warn("❗ DB에 없는 레시피 (LLM이 생성): {} (userId: {}, Date: {}, Type: {})", recipeName.trim(), userId, dayOfWeek, dietType);
-        continue;
-      }
-
-      RecommendedRecipe newRecipe = new RecommendedRecipe();
-      newRecipe.setUser(user);
-      newRecipe.setDate(dayOfWeek);
-      newRecipe.setType(dietType);
-      newRecipe.setRecipeData(recipeData);
-      recommendedRecipeRepository.save(newRecipe);
-    }
-    return "성공: " + dayOfWeek + " " + dietType + " 레시피 업데이트";
+    log.info("✅ {} {} 레시피 업데이트 완료: {} (userId: {})", dayOfWeek, dietType, selectedCandidate.getRecipeData().getRecipeName(), userId);
+    return "성공: " + dayOfWeek + " " + dietType + " 레시피 업데이트: " + selectedCandidate.getRecipeData().getRecipeName();
   }
 
-  // 업로드된 CSV 파일을 처리하여 DB에 저장
   public void changeCsvToRecipeData(MultipartFile file) throws IOException {
     System.out.println("파일 이름: " + file.getOriginalFilename());
     System.out.println("파일 크기: " + file.getSize());
-    // MultipartFile을 읽기 위한 InputStreamReader로 변환
     InputStreamReader reader = new InputStreamReader(file.getInputStream(), StandardCharsets.UTF_8);
 
     List<RecipeData> recipeDataList = new CsvToBeanBuilder<RecipeData>(reader)
         .withType(RecipeData.class)
-        .withSeparator(',') // 필수: csv 파일이 쉼표 구분자일 경우
+        .withSeparator(',')
         .withIgnoreLeadingWhiteSpace(true)
         .build()
         .parse();
 
-    // DB에 저장
     recipeDataRepository.saveAll(recipeDataList);
   }
 
-  // 자카드 유사도 계산
-  private double calculateJaccardSimilarity(RecipeData recipe1, RecipeData recipe2) {
+  private double calculateJacquardSimilarity(RecipeData recipe1, RecipeData recipe2) {
     if (recipe1.getIngredients() == null || recipe2.getIngredients() == null) {
       return 0.0;
     }
@@ -337,8 +331,7 @@ public class RecipeService {
 
     return (double) intersection.size() / union.size();
   }
-  
-  // 푸드데이터로부터 가져오기
+
   public void nutritionFromFoodData(){
     List<RecipeData> recipeDataList = loadRecipeData();
     List<RecipeData> mok = new ArrayList<>();
@@ -347,32 +340,25 @@ public class RecipeService {
     for (RecipeData recipeData : recipeDataList) {
       List<FoodData> foodDataList = foodDataRepository.findByFoodName(recipeData.getRecipeName());
 
+      FoodData foodData;
       if (!foodDataList.isEmpty()) {
-        FoodData foodData = foodDataList.get(0);
-
-        recipeData.setCalories(foodData.getCalories());
-        recipeData.setProtein(foodData.getProtein());
-        recipeData.setFat(foodData.getFat());
-        recipeData.setCarbohydrate(foodData.getCarbohydrate());
-
-        recipeDataRepository.save(recipeData);
+        foodData = foodDataList.getFirst();
 
       } else{
-        FoodData foodData = openAiApiService.getNutrientInfo(recipeData.getRecipeName());
+        foodData = openAiApiService.getNutrientInfo(recipeData.getRecipeName());
         foodData.setFoodImage(recipeData.getRecipeImage());
         foodDataRepository.save(foodData);
 
-        recipeData.setCalories(foodData.getCalories());
-        recipeData.setProtein(foodData.getProtein());
-        recipeData.setFat(foodData.getFat());
-        recipeData.setCarbohydrate(foodData.getCarbohydrate());
-        recipeDataRepository.save(recipeData);
       }
+      recipeData.setCalories(foodData.getCalories());
+      recipeData.setProtein(foodData.getProtein());
+      recipeData.setFat(foodData.getFat());
+      recipeData.setCarbohydrate(foodData.getCarbohydrate());
+      recipeDataRepository.save(recipeData);
 
     }
   }
 
-  // 연관 레시피 찾기
   private Map<RecipeData, List<RecipeData>> findRelatedRecipes(List<RecipeData> allRecipes, int topN) {
     Map<RecipeData, List<RecipeData>> relatedRecipesMap = new HashMap<>();
 
@@ -380,7 +366,7 @@ public class RecipeService {
       Map<RecipeData, Double> similarityScores = new HashMap<>();
       for (RecipeData recipe2 : allRecipes) {
         if (!recipe1.equals(recipe2)) {
-          double similarity = calculateJaccardSimilarity(recipe1, recipe2);
+          double similarity = calculateJacquardSimilarity(recipe1, recipe2);
           similarityScores.put(recipe2, similarity);
         }
       }
@@ -397,21 +383,7 @@ public class RecipeService {
     return relatedRecipesMap;
   }
 
-  private static class RecipeScore {
-    private RecipeData recipe;
-    private double score;
+  private record RecipeScore(RecipeData recipe, double score) {
 
-    public RecipeScore(RecipeData recipe, double score) {
-      this.recipe = recipe;
-      this.score = score;
-    }
-
-    public RecipeData getRecipe() {
-      return recipe;
-    }
-
-    public double getScore() {
-      return score;
-    }
   }
 }
